# SerialBLEChat

./: .gitignore  README.md  SerialComm.py
BLEMQTTSN/: index.js  (+3 more)
Client/ClientC++/: CMakeLists.txt
Client/ClientC++/serial/: ALL_BUILD.vcxproj  CMakeCache.txt  CTestTestfile.cmake  Client.vcxproj  Client.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  _catkin_empty_exported_target.vcxproj  clean_test_results.vcxproj  clean_test_results.vcxproj.filters  cmake_install.cmake  download_extra_data.vcxproj  doxygen.vcxproj  doxygen.vcxproj.filters  install_manifest.txt  run_tests.vcxproj  serial.sln  serial.vcxproj  serial.vcxproj.filters  serial__setup_util.py_exec_install_python.vcxproj  serial__setup_util.py_exec_install_python.vcxproj.filters  serial_example.vcxproj  serial_example.vcxproj.filters  tests.vcxproj
Client/ClientC++/serial/atomic_configure/: .rosinstall  _setup_util.py  setup.bat
Client/ClientC++/serial/catkin_generated/: env_cached.bat  generate_cached_setup.py  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.bat
Client/ClientC++/serial/catkin_generated/installspace/: .rosinstall  env.bat  local_setup.bat  serial.pc  serialConfig.cmake  setup.bat
Client/ClientC++/serial/devel/: .catkin  env.bat  local_setup.bat
Client/ClientC++/serial/devel/lib/: serial.exp  serial.lib
Client/ClientC++/serial/examples/: serial_example.cc
Client/ClientC++/serial/include/serial/: serial.h
Client/ClientC++/serial/src/: CMakeCache.txt
Client/ClientC++/source/: main.cpp
(+95 files in other folders)
